@startuml
!include ../style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR_T4
skinparam classBackgroundColor LOGIC_COLOR

package Logic {

package Parser {
class FinanceTrackerParser
class ConvertBookmarkCommandParser
}

package Command {
class ConvertBookmarkCommand
class ConvertBookmarkXYZCommand
}
}

Class HiddenOutside #FFFFFF

FinanceTrackerParser ..> ConvertBookmarkCommandParser: creates >
FinanceTrackerParser ..> ConvertBookmarkXYZCommand: creates >

ConvertBookmarkCommandParser ..> ConvertBookmarkCommand: creates >

ConvertBookmarkXYZCommand -up-|> ConvertBookmarkCommand

note left of ConvertBookmarkXYZCommand: ConvertBookmarkXYZCommand = ConvertBookmarkExpenseCommand, \nConvertBookmarkIncomeCommand

@enduml
